# doorbell

./: .gitignore  CMakeLists.txt  doorbell.code-workspace  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  buffer.c  buffer.h  camera_pins.h  camera_server.c  camera_server.h  camera_server_config.h  doorbell_buffer.c  doorbell_buffer.h  doorbell_button.c  doorbell_button.h  doorbell_camera.c  doorbell_camera.h  doorbell_config.h  doorbell_httpd.c  doorbell_httpd.h  doorbell_led.c  doorbell_led.h  doorbell_main.c  doorbell_mqtt.c  doorbell_mqtt.h  doorbell_ota.c  doorbell_ota.h  doorbell_queue.h  doorbell_sound.c  doorbell_sound.h  doorbell_wifi.c  doorbell_wifi.h  doorbell_wsclient.c  doorbell_wsclient.h  home.html  idf_component.yml  main.c  output.pcm
web/: home.html  index.html
